# TDL_Terminal-DirectMedia-Library

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
POC/: dvdScreen
demo/: bird  font  sound
doc/Doxyfile/: Doxyfile
doc/diagram/: TDL Class DIagram
example/: CMakeLists.txt
example/anim/: main.cpp
example/bird/: main.cpp
example/font/: main.cpp
example/game/: main.cpp
example/sound/: main.cpp
exemple/: main.cpp
include/: Rect.hpp  Vector.hpp  Window.hpp
include/Event/: Event.hpp
include/Input/: EInput.hpp  inputKeyboard.hpp
include/Matrix/: PixelMatrix.hpp
include/Pixel/: Pixel.hpp
include/Signal/: SignalHandler.hpp
include/Sprite/: Sprite.hpp
include/Texture/: Texture.hpp  TextureLoader.hpp
include/Window/: window.hpp  windowBase.hpp
include/tdl/: Rect.hpp  Vector.hpp  Window.hpp
include/tdl/Drawable/: Drawable.hpp
include/tdl/Drawable/Texture/: Texture.hpp  TextureLoader.hpp
include/tdl/Event/: Event.hpp
include/tdl/Input/: EInput.hpp  inputKeyboard.hpp
include/tdl/Math/: UnitConverter.hpp
include/tdl/Matrix/: PixelMatrix.hpp  Transform.hpp  Transformation.hpp
include/tdl/Pixel/: Pixel.hpp
include/tdl/Signal/: SignalHandler.hpp
include/tdl/Sprite/: Sprite.hpp
include/tdl/Text/: Text.hpp
include/tdl/Text/Font/: Font.hpp
include/tdl/Texture/: Texture.hpp
include/tdl/Window/: window.hpp  windowBase.hpp
include/tdl/sound/: Sound.hpp  openAlWrapper.hpp
input_management/: EInput.hpp  input.cpp  input.hpp
logger/: logger.cpp  logger.hpp
shape/: shape.cpp  shape.hpp
source/Input/: input.cpp
source/Matrix/: PixelMatrix.cpp
source/Pixel/: Pixel.cpp
source/Signal/: SignalHandler.cpp
source/Sprite/: Sprite.cpp
source/Texture/: Texture.cpp  TextureLoader.cpp
source/Window/: window.cpp  windowBase.cpp  window_anssi.cpp  window_pixels.cpp
source/tdl/Drawable/Texture/: Texture.cpp  TextureLoader.cpp
source/tdl/Input/: input.cpp
source/tdl/Matrix/: PixelMatrix.cpp  Transform.cpp  Transformation.cpp
source/tdl/Pixel/: Pixel.cpp
source/tdl/Signal/: SignalHandler.cpp
source/tdl/Sprite/: Sprite.cpp
source/tdl/Text/: Text.cpp
source/tdl/Text/Font/: Font.cpp
source/tdl/Texture/: Texture.cpp  TextureLoader.cpp
source/tdl/Window/: window.cpp  windowBase.cpp  window_anssi.cpp  window_pixels.cpp
source/tdl/sound/: sound.cpp
testing/: main.cpp
texture/: Vector.hpp  texture.cpp  texture.hpp
texture/src/: resize.cpp  rotation.cpp  texture.cpp
window/: SignalHandler.cpp  SignalHandler.hpp  window.cpp  window.hpp
